corrected cke-visibility
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/taoQtiItem/trunk@20433 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/scss/item-creator.scss
+++ b/views/scss/item-creator.scss
@@ -1009,9 +1009,6 @@
             [data-html-editable][contenteditable=true]{
                 border:1px dotted $info;
             }
-            [data-role="cke-launcher"]{
-                display:block !important;
-            }
         }
         [data-html-editable]{
             margin-right:0px;//@todo value to be determined
